# chatbot-canabinoides-br

./: .gitignore  LICENSE  README.md  pyproject.toml
src/core/: config.py  logging_config.py
