[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Metadados do projeto
# ---------------------------------------------------------------------------
[project]
name = "cannabinoid-rag"
version = "0.2.0"
description = "Chatbot RAG para prescrição de canabinóides — ANVISA / CFM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # ── API & servidor ──────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",       # uploads de arquivo na API
    "slowapi>=0.1.9",                # rate limiting (OWASP)

    # ── Autenticação & segurança ────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",  # JWT
    "passlib[bcrypt]>=1.7.4",            # hashing de senhas

    # ── Configuração & validação ────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ── LLM principal ───────────────────────────────────────────────────────
    "anthropic>=0.28.0",

    # ── Embeddings ──────────────────────────────────────────────────────────
    "openai>=1.35.0",
    "httpx>=0.27.0",

    # ── Orquestração RAG (LangChain) ────────────────────────────────────────
    # Usamos somente os pacotes necessários para evitar dependências desnecessárias
    "langchain>=0.2.5",
    "langchain-core>=0.2.10",
    "langchain-openai>=0.1.14",      # LLM / embeddings via LangChain
    "langchain-anthropic>=0.1.19",   # Claude via LangChain
    "langchain-qdrant>=0.1.1",       # integração Qdrant oficial

    # ── Banco vetorial ──────────────────────────────────────────────────────
    "qdrant-client>=1.9.1",

    # ── Extração de PDF ─────────────────────────────────────────────────────
    "pdfplumber>=0.11.2",
    "pypdf>=4.2.0",                  # fallback + metadados de PDF
    "Pillow>=10.3.0",                # necessário para OCR e imagens de PDF

    # ── OCR (páginas escaneadas) ─────────────────────────────────────────────
    # pytesseract exige instalação do binário Tesseract no SO:
    #   Ubuntu/Debian: sudo apt-get install tesseract-ocr tesseract-ocr-por
    #   macOS:         brew install tesseract tesseract-lang
    "pytesseract>=0.3.10",

    # ── Utilitários gerais ──────────────────────────────────────────────────
    "tenacity>=8.3.0",               # retry com backoff (usado no embedder)
    "tiktoken>=0.7.0",               # contagem precisa de tokens OpenAI
    "python-dotenv>=1.0.1",          # carrega .env em scripts CLI
    "structlog>=24.2.0",             # logging estruturado (JSON em produção)
]

[project.optional-dependencies]
dev = [
    # Testes
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",                 # cliente de teste para FastAPI (TestClient async)

    # Qualidade de código
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",

    # Utilitários de desenvolvimento
    "ipykernel>=6.29.0",             # notebooks para exploração dos PDFs
    "rich>=13.7.0",                  # output bonito em scripts CLI
]

# ---------------------------------------------------------------------------
# Hatchling — src layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ensina o Python a achar os módulos dentro de src/
[tool.hatch.build]
sources = ["src"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["tests"]
addopts        = "-ra -q --tb=short"
# Cobre apenas o código em src/ (exclui scripts de infra e notebooks)
# Execute com: pytest --cov=src --cov-report=term-missing
filterwarnings = [
    "ignore::DeprecationWarning:pdfminer",
    "ignore::DeprecationWarning:pdfplumber",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
src            = ["src"]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (segurança)
    "ANN", # type annotations
    "RUF", # regras específicas do Ruff
]
ignore = [
    "S101",   # assert OK em tests
    "ANN101", # self não precisa de annotation
    "ANN102", # cls não precisa de annotation
    "S105",   # possível senha — falso positivo no .env.example
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["core", "pipeline", "api"]

# ---------------------------------------------------------------------------
# Mypy — type checking estrito
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.11"
mypy_path              = "src"
strict                 = true
ignore_missing_imports = true
exclude                = ["tests/", "notebooks/"]
